syntax = "proto3"; // we use proto version 3
package consensus_interface;   // similar to namespace, avoid conflicts

/** Paxos consensus **/
service ConsensusService { 
  rpc propose(Request) returns (Response) {};
  rpc accept(Request) returns (Response) {};
  rpc success(Request) returns (Empty) {};
  rpc ping(Empty) returns (Empty) {};
  rpc get_leader(Empty) returns (GetLeaderResponse) {};
  rpc elect_leader(ElectLeaderRequest) returns (Empty) {};
  rpc db_address_request(Empty) returns (DbAddressResponse) {};
  rpc get_stats(Empty) returns (StatisticsResponse) {};
}

message Empty {

}


enum Operation {
  GET = 0;
  SET = 1;
  DELETE = 2;
  SET_LEADER = 3;
  NOT_SET = 4;
};

message Request {
    string key = 1;
    string value = 2;
    int32 pserver_id = 3;
    int32 aserver_id = 4;
    int32 round = 5;
    Operation op = 6;
}

enum Status_Types {
   OK = 0;
   FAILED = 1;
 }

message Response {
    string value = 1;
    int32 pserver_id = 2;
    int32 aserver_id = 3;
    int32 round = 4;
    Operation op = 5;
}

message GetLeaderResponse{
  string leader = 1;
}

message ElectLeaderRequest {
	string key = 1;
	string value = 2;
}

message DbAddressResponse {
  string addr = 1;
}

message LogEntry {
  int32 p_server_id = 1;
  int32 a_server_id = 2;
  Operation op = 3;
  string accepted_value = 4;
}

message StatisticsResponse {
  map<string, int32> incount = 1;
  map<string, int32> outcount = 2;

}